force-app-metadata-removed/main/default/objects/Appointment__c/fields/Appointment_Number_Per_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Number_Per_Type__c</fullName>
    <label>Appointment Number Per Type</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>