force-app-metadata-removed/main/default/objects/Appointment__c/fields/Assessment_Recomendation__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Recomendation__c</fullName>
    <label>Helpline Recomendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stabilisation Symptom Management Group – Evening</fullName>
            </value>
            <value>
                <fullName>Stabilisation Symptom Management Group - Female Only</fullName>
            </value>
            <value>
                <fullName>Stabilisation Symptom Management Group - Mixed</fullName>
            </value>
            <value>
                <fullName>Step 2 Anger Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Anxiety Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Assertiveness Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Depression Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Eating Disorders Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 GAD Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Book) Email</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Book) Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Book) Telephone</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Email</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Skype</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Telephone</fullName>
            </value>
            <value>
                <fullName>Step 2 Health Anxiety Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Mixed Disorder Int Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Mixed Disorder Non-Int Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 OCD Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Positive You Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Psycho Educational Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Reading for Wellbeing Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Relapse Prevention Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Relaxation Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Sleep Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Stress Workshop</fullName>
            </value>
            <value>
                <fullName>Step 2 Support Call F2F</fullName>
            </value>
            <value>
                <fullName>Step 2 Support Call Telephone</fullName>
            </value>
            <value>
                <fullName>Step 3+ CBT Face to Face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>