force-app-metadata-removed/main/default/objects/Appointment__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <formula>OR(TEXT(Outcome__c) = &apos;Attended on time&apos;, TEXT(Outcome__c) = &apos;Arrived late and seen&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended?</label>
    <type>Checkbox</type>
</CustomField>