force-app-metadata-removed/main/default/objects/Appointment__c/fields/Attended_Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>Attended_Appointment_Number__c</fullName>
    <label>Attended Appointment Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>