force-app-metadata-removed/main/default/objects/Appointment__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <formula>TEXT(Charge__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Type</label>
    <type>Text</type>
</CustomField>