force-app-metadata-removed/main/default/objects/Appointment__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <formula>Case__r.ContactID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID</label>
    <type>Text</type>
</CustomField>