force-app-metadata-removed/main/default/objects/Appointment__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <formula>Start_Date_Time__c + (VALUE(TEXT(Duration__c))/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date / Time</label>
    <type>DateTime</type>
</CustomField>