force-app-metadata-removed/main/default/objects/Appointment__c/fields/Number_of_GAD7__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GAD7__c</fullName>
    <description>Counts number of GAD-7 per appointment</description>
    <inlineHelpText>Counts number of GAD-7 per appointment</inlineHelpText>
    <label>Number of GAD-7</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>