force-app-metadata-removed/main/default/objects/Appointment__c/fields/Number_of_PHQ9__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PHQ9__c</fullName>
    <description>Counts number of PHQ-9 per appointment</description>
    <inlineHelpText>Counts number of PHQ-9 per appointment</inlineHelpText>
    <label>Number of PHQ-9</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>