force-app-metadata-removed/main/default/objects/Appointment__c/fields/Number_of_Questionnaires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questionnaires__c</fullName>
    <description>Total number of questionnaires</description>
    <inlineHelpText>Total number of questionnaires</inlineHelpText>
    <label>Number of Questionnaires</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>