force-app-metadata-removed/main/default/objects/Appointment__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended on time</fullName>
            </value>
            <value>
                <fullName>Arrived late and seen</fullName>
            </value>
            <value>
                <fullName>Arrived late and not seen</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by or on behalf of client &lt;4 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by or on behalf of client &lt;8 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by or on behalf of client &lt;12 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by or on behalf of client &lt;24 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by or on behalf of client &gt;24 hours notice</fullName>
            </value>
            <value>
                <fullName>Did not attend - no advance warning given</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by service &lt;4 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by service &lt;8 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by service &lt;12 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by service &lt;24 hours notice</fullName>
            </value>
            <value>
                <fullName>Appointment cancelled by service &gt;24 hours notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>