force-app-metadata-removed/main/default/objects/Appointment__c/fields/Practitioner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments (Practitioner)</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>