force-app-metadata-removed/main/default/objects/Appointment__c/fields/Practitioner_Is_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Is_Affiliate__c</fullName>
    <description>Returns true if the practitioner that carried out the current appointment is an affiliate (defined by the practitioner being a portal user)</description>
    <formula>IF(
OR(Practitioner__r.Profile.Name = &apos;WaW Customer Community Plus Login&apos;,
Practitioner__r.Profile.Name = &apos;WaW Customer Community Plus User&apos;,
Practitioner__r.Profile.Name = &apos;WAW Partner Community Login User&apos;,
Practitioner__r.Profile.Name = &apos;WAW Partner Community User&apos;,
Practitioner__r.Profile.Name = &apos;Affiliate Community Plus Login User&apos;,
Practitioner__r.Profile.Name = &apos;Affiliate Community Plus User&apos;), TRUE, FALSE)</formula>
    <label>Practitioner Is Affiliate?</label>
    <type>Checkbox</type>
</CustomField>