force-app-metadata-removed/main/default/objects/Appointment__c/fields/Reason_Cancelled_By_Service__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cancelled_By_Service__c</fullName>
    <label>Reason Cancelled By Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Outcome__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Practitioner ill</fullName>
            </value>
            <value>
                <fullName>Interpreter problems</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>