force-app-metadata-removed/main/default/objects/Appointment__c/fields/Reason_Cancelled_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cancelled_Details__c</fullName>
    <inlineHelpText>Please enter a brief reason for the cancellation (e.g. Illness, Childcare etc)
Ensure detailed notes of conversations are added as Tasks on the Case</inlineHelpText>
    <label>Reason Cancelled Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>