force-app-metadata-removed/main/default/objects/Appointment__c/fields/SYS_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>SYS_Account_Owner_Name__c</fullName>
    <description>The full name of the Account Owner</description>
    <formula>Case__r.Account.Owner.FirstName + &apos; &apos; + Case__r.Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>