force-app-metadata-removed/main/default/objects/Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PCP_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>