force-app-metadata-removed/main/default/objects/Appointment__c/fields/WAW_Any_Other_Relevant_Information__c.field-meta.xml
<CustomField>
    <fullName>WAW_Any_Other_Relevant_Information__c</fullName>
    <defaultValue>&apos;**** The summary fields must be typed in full sentence(s) with appropriate punctuation as this summary will be added to official communications ****&apos;</defaultValue>
    <label>Any Other Relevant Information</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>