force-app-metadata-removed/main/default/objects/Appointment__c/fields/WAW_Assessment_Risk__c.field-meta.xml
<CustomField>
    <fullName>WAW_Assessment_Risk__c</fullName>
    <defaultValue>&quot;No risk identified at the time of assessment.&quot;</defaultValue>
    <label>Risk</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>