force-app-metadata-removed/main/default/objects/Appointment__c/fields/WAW_Focus_for_Treatment__c.field-meta.xml
<CustomField>
    <fullName>WAW_Focus_for_Treatment__c</fullName>
    <defaultValue>&apos;**** The summary fields must be typed in full sentence(s) with appropriate punctuation as this summary will be added to official communications ****&apos;</defaultValue>
    <label>Focus for Treatment</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>