force-app-metadata-removed/main/default/objects/Appointment__c/fields/WAW_Specific_Client_Information_Needs__c.field-meta.xml
<CustomField>
    <fullName>WAW_Specific_Client_Information_Needs__c</fullName>
    <defaultValue>&quot;None identified.&quot;</defaultValue>
    <inlineHelpText>Specific Client Information / Communication Needs</inlineHelpText>
    <label>Specific Client Information / Needs</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>