force-app-metadata-removed/main/default/objects/Appointment__c/recordTypes/Treatment.recordType-meta.xml
<RecordType>
    <fullName>Treatment</fullName>
    <active>true</active>
    <description>Face to Face / Telephone Appointments</description>
    <label>Treatment</label>
</RecordType>