force-app-metadata-removed/main/default/objects/Appointment__c/recordTypes/WAW_Other.recordType-meta.xml
<RecordType>
    <fullName>WAW_Other</fullName>
    <active>true</active>
    <description>Used for Management Advisory, Legal and Financial and Mediation</description>
    <label>WAW - Other</label>
</RecordType>