force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Appointment_is_after_case_open_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_is_after_case_open_date</fullName>
    <active>false</active>
    <description>appointment open date can not be before case open date</description>
    <errorConditionFormula>Case__r.CreatedDate &gt;  Start_Date_Time__c
&amp;&amp; $User.Skip_Triggers__c = false
&amp;&amp; $User.FirstName != &apos;Brodie&apos;</errorConditionFormula>
    <errorDisplayField>Start_Date_Time__c</errorDisplayField>
    <errorMessage>Invalid start date / time. The case&apos;s open date occours after this date.</errorMessage>
</ValidationRule>