force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Cancelled_details_mandatory_if_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_details_mandatory_if_other</fullName>
    <active>true</active>
    <description>Reason cancelled details mandatory if reason cancelled by service is other</description>
    <errorConditionFormula>AND (ISPICKVAL ( Reason_Cancelled_By_Service__c ,&quot;Other Reason&quot;), ISBLANK( Reason_Cancelled_Details__c ))</errorConditionFormula>
    <errorDisplayField>Reason_Cancelled_Details__c</errorDisplayField>
    <errorMessage>Field must not be blank for this Outcome</errorMessage>
</ValidationRule>