force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Cannot_Edit_Without_Account_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Without_Account_Contact</fullName>
    <active>true</active>
    <description>Does not allow the user to edit the record if it does not contain an account and Contact</description>
    <errorConditionFormula>AND(NOT(ISNEW()), OR(Case__c = &apos;&apos;, Contact__c = &apos;&apos;))</errorConditionFormula>
    <errorMessage>Account and Contact must be entered in order to edit this record</errorMessage>
</ValidationRule>