force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Closed_case_val.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_case_val</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Case__r.IsClosed = true, Case__r.ClosedDate &lt; Start_Date_Time__c)
&amp;&amp; $User.Skip_Triggers__c = false</errorConditionFormula>
    <errorMessage>You cannot add appointments to a closed case!</errorMessage>
</ValidationRule>