force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Missing_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Case</fullName>
    <active>true</active>
    <description>Must add an Episode of Care if a client is added</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Contact__c )),ISBLANK( Case__c ))</errorConditionFormula>
    <errorMessage>Must add an Episode of Care if a client is added</errorMessage>
</ValidationRule>