force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/No_Questionnaire_on_Attended_Appointment.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Questionnaire_on_Attended_Appointment</fullName>
    <active>true</active>
    <description>Stops and appointment being saved if outcome is set to attended and no questionnaires completed</description>
    <errorConditionFormula>AND(
   OR(
        AND(Account__r.Core10__c = True, OR(Number_of_CORE10__c  = 0, ISBLANK(Number_of_CORE10__c  ))),
        AND(Account__r.GAD_7__c = True, OR(Number_of_GAD7__c = 0, ISBLANK(Number_of_GAD7__c))),
        AND(Account__r.PHQ_9__c = True, OR(Number_of_PHQ9__c = 0, ISBLANK(Number_of_PHQ9__c)))
        ),
   OR(TEXT(Outcome__c) = &apos;Attended on time&apos;, TEXT(Outcome__c) = &apos;Arrived late and seen&apos;)) 
   &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c
   &amp;&amp; $User.Skip_Triggers__c = false</errorConditionFormula>
    <errorMessage>You must complete questionnaires to save this record.</errorMessage>
</ValidationRule>