force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/not_blank_reason_cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>not_blank_reason_cancelled</fullName>
    <active>true</active>
    <description>service outcomes and reason cancelled details should be available only on all cancelled outcomes</description>
    <errorConditionFormula>AND (
OR(
CONTAINS(TEXT(Outcome__c), &quot;Attended&quot;),
CONTAINS(TEXT(Outcome__c), &quot;Arrived&quot;)
),
NOT(ISBLANK( Reason_Cancelled_Details__c ))
)</errorConditionFormula>
    <errorMessage>Field must be blank for this Outcome</errorMessage>
</ValidationRule>