force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Questionnaire_on_non_attended_appt.validationRule-meta.xml
<ValidationRule>
    <fullName>Questionnaire_on_non_attended_appt</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(OR(TEXT(Outcome__c) = &apos;Attended on time&apos;, TEXT(Outcome__c) = &apos;Arrived late and seen&apos;, ISBLANK(TEXT(Outcome__c)))),
Number_of_Questionnaires__c &gt; 0)</errorConditionFormula>
    <errorDisplayField>Outcome__c</errorDisplayField>
    <errorMessage>This outcome cannot be selected as there are questionnaires logged against this appointment</errorMessage>
</ValidationRule>