force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Reason_for_Service_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Service_Cancellation</fullName>
    <active>true</active>
    <description>If the appointment is cancelled by the service a reason should be provided</description>
    <errorConditionFormula>AND (
CONTAINS(TEXT(Outcome__c), &quot;behalf of Service&quot;),
ISBLANK( TEXT(Reason_Cancelled_By_Service__c ))
)</errorConditionFormula>
    <errorDisplayField>Reason_Cancelled_By_Service__c</errorDisplayField>
    <errorMessage>Field must not be blank for this Outcome</errorMessage>
</ValidationRule>