force-app-metadata-removed/main/default/objects/Appointment__c/validationRules/Validate_App_Type_Against_PCP.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_App_Type_Against_PCP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Type__c) != TEXT(Case__r.Type), TEXT(Type__c)!= &apos;Helpline Call&apos;, RecordType.Name != &apos;Other - WAW&apos;)
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c
&amp;&amp; $User.Skip_Triggers__c = false</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>This appointment type does not match the planned care pathway for this client&apos;s case!</errorMessage>
</ValidationRule>